[gd_scene load_steps=5 format=3 uid="uid://xgxdoj1p7crd"]

[ext_resource type="Script" path="res://Scripts/NodeEditor.gd" id="1_5akxe"]
[ext_resource type="Script" path="res://Scripts/NodeGraph.gd" id="2_n42fk"]
[ext_resource type="PackedScene" uid="uid://dg7gx4f26f4g1" path="res://Scenes/Nodes/output_node.tscn" id="3_xs5uj"]
[ext_resource type="Script" path="res://Scripts/Nodes/OutputNode.gd" id="4_0umjo"]

[node name="GraphEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5akxe")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Toolbar" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="Button" type="Button" parent="Layout/Toolbar"]
layout_mode = 2
text = "+ Texture"

[node name="NewFloatButton" type="Button" parent="Layout/Toolbar"]
layout_mode = 2
text = "+ Float"

[node name="NewInvertButton" type="Button" parent="Layout/Toolbar"]
layout_mode = 2
text = "+ Invert"

[node name="NewGrayscaleButton" type="Button" parent="Layout/Toolbar"]
layout_mode = 2
text = "+ Grayscale"

[node name="Editor" type="HBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="GraphEdit" type="GraphEdit" parent="Layout/Editor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
minimap_enabled = false
script = ExtResource("2_n42fk")

[node name="OutputNode" parent="Layout/Editor/GraphEdit" instance=ExtResource("3_xs5uj")]
layout_mode = 0
offset_left = 400.0
offset_top = 200.0
offset_right = 520.0
offset_bottom = 353.0
mouse_filter = 1
position_offset = Vector2(400, 200)
script = ExtResource("4_0umjo")

[node name="ExportPanel" type="VBoxContainer" parent="Layout/Editor"]
custom_minimum_size = Vector2(250, 2.08165e-12)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Layout/Editor/ExportPanel"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1

[node name="Spacer" type="Control" parent="Layout/Editor/ExportPanel"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="Layout/Editor/ExportPanel"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
item_count = 8
popup/item_0/text = "32"
popup/item_0/id = 0
popup/item_1/text = "64"
popup/item_1/id = 1
popup/item_2/text = "128"
popup/item_2/id = 2
popup/item_3/text = "256"
popup/item_3/id = 3
popup/item_4/text = "512"
popup/item_4/id = 4
popup/item_5/text = "1024"
popup/item_5/id = 5
popup/item_6/text = "2048"
popup/item_6/id = 6
popup/item_7/text = "4096"
popup/item_7/id = 7

[node name="Export" type="Button" parent="Layout/Editor/ExportPanel"]
layout_mode = 2
text = "Export"

[connection signal="pressed" from="Layout/Toolbar/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Layout/Toolbar/NewFloatButton" to="." method="_on_new_float_button_pressed"]
[connection signal="pressed" from="Layout/Toolbar/NewInvertButton" to="." method="_on_new_invert_button_pressed"]
[connection signal="pressed" from="Layout/Toolbar/NewGrayscaleButton" to="." method="_on_new_grayscale_button_pressed"]
[connection signal="child_entered_tree" from="Layout/Editor/GraphEdit" to="Layout/Editor/GraphEdit" method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="Layout/Editor/GraphEdit" to="Layout/Editor/GraphEdit" method="_on_child_exiting_tree"]
[connection signal="connection_request" from="Layout/Editor/GraphEdit" to="Layout/Editor/GraphEdit" method="_on_connection_request"]
[connection signal="delete_nodes_request" from="Layout/Editor/GraphEdit" to="Layout/Editor/GraphEdit" method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="Layout/Editor/GraphEdit" to="Layout/Editor/GraphEdit" method="_on_disconnection_request"]
[connection signal="ready" from="Layout/Editor/GraphEdit" to="." method="_on_graph_edit_ready"]
[connection signal="pressed" from="Layout/Editor/ExportPanel/Export" to="." method="_on_export_pressed"]
